# STM32CubeMP2

./: License.md  Package_license.html  Package_license.md  README.md  Release_Notes.html  SECURITY.md  package.xml  sbom_cdx.json
Drivers/BSP/STM32MP215F-DK/: Release_Notes.html  STM32MP215F-DK_BSP_User_Manual.chm  stm32mp215f_disco.c  stm32mp215f_disco.h  stm32mp215f_disco_bus.c  stm32mp215f_disco_bus.h  stm32mp215f_disco_camera.c  stm32mp215f_disco_camera.h  stm32mp215f_disco_errno.h  stm32mp215f_disco_lcd.c  stm32mp215f_disco_lcd.h  stm32mp215f_disco_stpmic2l.c  stm32mp215f_disco_stpmic2l.h  stm32mp2xx_clocks.h
Drivers/BSP/STM32MP235F-DK/: Release_Notes.html  STM32MP235F-DK_BSP_User_Manual.chm  stm32mp235f_disco.c  stm32mp235f_disco.h  stm32mp235f_disco_bus.c  stm32mp235f_disco_bus.h  stm32mp235f_disco_pmic.c  stm32mp235f_disco_pmic.h  stm32mp235f_disco_usbpd_pwr.c  stm32mp235f_disco_usbpd_pwr.h
Drivers/BSP/STM32MP257F-DK/: Release_Notes.html  STM32MP257F-DK_BSP_User_Manual.chm  stm32mp257f_disco.c  stm32mp257f_disco.h  stm32mp257f_disco_bus.c  stm32mp257f_disco_bus.h  stm32mp257f_disco_camera.c  stm32mp257f_disco_camera.h  stm32mp257f_disco_pmic.c  stm32mp257f_disco_pmic.h  stm32mp257f_disco_usbpd_pwr.c  stm32mp257f_disco_usbpd_pwr.h
Drivers/BSP/STM32MP257F-EV1/: Release_Notes.html  STM32MP257F-EV1_BSP_User_Manual.chm  stm32mp257f_eval.c  stm32mp257f_eval.h  stm32mp257f_eval_bus.c  stm32mp257f_eval_bus.h  stm32mp257f_eval_camera.c  stm32mp257f_eval_camera.h  stm32mp257f_eval_lcd.c  stm32mp257f_eval_lcd.h  stm32mp257f_eval_pmic.c  stm32mp257f_eval_pmic.h  stm32mp257f_eval_usbpd_pwr.c  stm32mp257f_eval_usbpd_pwr.h
Drivers/STM32MP2xx_HAL_Driver/: README.md  Release_Notes.html
Middlewares/ST/scmiagent/: mbox_scmi.c  scmi.h  (+6 more)
Projects/: Release_Notes.html  STM32CubeProjectsList.html
Projects/STM32MP215F-DK/Demonstrations/OpenAMP/OpenAMP_TTY_echo/: CMakeLists.txt  Readme.txt
Projects/STM32MP215F-DK/Demonstrations/OpenAMP/OpenAMP_TTY_echo/CM33/NonSecure/Core/Inc/: main.h  stm32mp2xx_hal_conf.h
Projects/STM32MP215F-DK/Demonstrations/OpenAMP/OpenAMP_TTY_echo/CM33/NonSecure/Core/Src/: syscalls.c
Projects/STM32MP215F-DK/Demonstrations/OpenAMP/OpenAMP_TTY_echo/CM33/NonSecure/OPENAMP/: openamp.c  openamp_conf.h  openamp_log.c
Projects/STM32MP215F-DK/Demonstrations/OpenAMP/OpenAMP_TTY_echo/util/: cortex-m33-stm32mp2.cmake
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/: CMakeLists.txt  Readme.txt
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/CM33/NonSecure/Core/Inc/: main.h  stm32mp235f_disco_conf.h
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/CM33/NonSecure/Core/Src/: stm32mp2xx_hal_timebase_tim.c
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/CM33/NonSecure/FREERTOS/App/: app_freertos.c
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/CM33/NonSecure/OpenAMP/Inc/: openamp_conf.h
Projects/STM32MP235F-DK/Demonstrations/USBPD_DRP_UCSI/CM33/NonSecure/OpenAMP/Src/: rsc_table.c
Projects/STM32MP257F-EV1/Demonstrations/CM0PLUS_DEMO/: CMakeLists.txt  README.md  Readme.txt  readme.html
Projects/STM32MP257F-EV1/Demonstrations/CM0PLUS_DEMO/CM0PLUS/NonSecure/Core/Inc/: lowpower_wa.h  main.h  stm32mp257f_eval_conf.h  stm32mp2xx_hal_conf.h  stm32mp2xx_it.h
Projects/STM32MP257F-EV1/Demonstrations/CM0PLUS_DEMO/CM0PLUS/NonSecure/Core/Src/: main.c  stm32mp2xx_hal_msp.c  stm32mp2xx_it.c  syscalls.c
Projects/STM32MP257F-EV1/Demonstrations/CM0PLUS_DEMO/STM32CubeIDE/: .project
Projects/STM32MP257F-EV1/Demonstrations/CM0PLUS_DEMO/STM32CubeIDE/CM0PLUS/: .project
Projects/STM32MP257F-EV1/Demonstrations/CM0PLUS_DEMO/STM32CubeIDE/CM0PLUS/NonSecure/: .cproject  .project
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/: CMakeLists.txt  Readme.txt  stm32mp25xx_SRAM_m33_ns.ld
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/CM33/NonSecure/Core/Inc/: main.h  stm32mp257f_eval_conf.h  stm32mp2xx_hal_conf.h
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/CM33/NonSecure/Core/Src/: main.c  stm32mp2xx_hal_msp.c  stm32mp2xx_it.c
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/CM33/NonSecure/OPENAMP/: mbox_ipcc.c  openamp.h  openamp_log.c
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/CM33/NonSecure/libmetal/lib/include/metal/: alloc.h  compiler.h  condition.h  config.h  io.h  irq.h  irq_controller.h  list.h  log.h  mutex.h
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/CM33/NonSecure/libmetal/lib/include/metal/processor/arm/: cpu.h
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/CM33/NonSecure/libmetal/lib/include/metal/system/generic/: sleep.h
Projects/STM32MP257F-EV1/Demonstrations/LowPower_SRAM_Demo/util/: color.cmake  cortex-m33-stm32mp2.cmake
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/: CMakeLists.txt  README.html  README.md  stm32mp2xx_DDR_m33_ns.ld
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/Core/Inc/: stm32mp257f_eval_conf.h  stm32mp2xx_it.h
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/Core/Src/: main.c  stm32mp2xx_hal_msp.c  stm32mp2xx_hal_timebase_tim.c
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/CM33/NonSecure/FREERTOS/App/: app_freertos.c  app_freertos.h  app_tasks_config.h  remoteproc_task.c
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/STM32CubeIDE/CM33/NonSecure/: .cproject  .project  copyFlashBinaries.sh
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/STM32CubeIDE/CM33/StarterApp_M33TD_CM33_trusted-firmware-m/: .cproject  .project
Projects/STM32MP257F-EV1/Demonstrations/StarterApp_M33TD/cmake/: hal_sources.cmake
Projects/_htmresc/: mini-st_2020.css
Utilities/CoproSync/: copro_sync.c  copro_sync.h
Utilities/GUI_INTERFACE/: Release_Notes.md  data_struct_tlv.c  data_struct_tlv.h  gui_api.c  gui_api.h
Utilities/ResourcesManager/: res_mgr.c  res_mgr.h  res_mgr_stm32mp21xxxx.h  res_mgr_stm32mp23xxxx.h  res_mgr_stm32mp25xxxx.h
Utilities/TRACER_EMB/: Release_Notes.html  Release_Notes.md  tracer_emb.c
_htmresc/: ReleaseNotes.html
(+1529 files in other folders)
